@@ -172,10 +172,10 @@ public class MemorySettingsAdvancedPanel extends DefaultSettingsPanel implements
 
     public void setAllocStackTraceLimit(int limit) {
         if (limit <= 0) {
-            defineDepthSpinner.setValue((limit < 0) ? new Integer(-limit) : new Integer(10));
+            defineDepthSpinner.setValue((limit < 0) ? Integer.valueOf(-limit) : Integer.valueOf(10));
             fullDepthRadio.setSelected(true);
         } else {
-            defineDepthSpinner.setValue(new Integer(limit));
+            defineDepthSpinner.setValue(Integer.valueOf(limit));
             definedDepthRadio.setSelected(true);
         }
     }
